Added logging with serilog

--- a/SimpleLeaveManagement.Web/appsettings.json
+++ b/SimpleLeaveManagement.Web/appsettings.json
@@ -2,10 +2,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": {
+      "Name": "File",
+      "Args": {
+        "path": "./logs/log-.log",
+        "rollingInterval": "Day"
+      }
     }
   },
   "AllowedHosts": "*"
