--- a/SimpleLeaveManagement.Web/SimpleLeaveManagement.Web.csproj
+++ b/SimpleLeaveManagement.Web/SimpleLeaveManagement.Web.csproj
@@ -28,6 +28,7 @@
         <PackageReference Include="Serilog" Version="2.11.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
         <PackageReference Include="Serilog.Exceptions" Version="8.3.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
