Fixed problem with Serilog sinks. Added leave types controller and views.

--- a/SimpleLeaveManagement.Web/appsettings.json
+++ b/SimpleLeaveManagement.Web/appsettings.json
@@ -10,13 +10,14 @@
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-    "WriteTo": {
+    "WriteTo": [
+      {
       "Name": "File",
       "Args": {
         "path": "./logs/log-.log",
         "rollingInterval": "Day"
       }
-    }
+    }]
   },
   "AllowedHosts": "*"
 }
