Added leave types view model. Added automapper configuration class

--- a/SimpleLeaveManagement.Web/SimpleLeaveManagement.Web.csproj
+++ b/SimpleLeaveManagement.Web/SimpleLeaveManagement.Web.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+        <None Remove="app.db-shm" />
+        <None Remove="app.db-wal" />
     </ItemGroup>
 
     <ItemGroup>
