Fixed nullable TaxId problem. Added roles. Added default users. Set up registration page.

--- a/SimpleLeaveManagement.Web/appsettings.json
+++ b/SimpleLeaveManagement.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "ApplicationDbContextConnection": "Data Source=SimpleLeaveManagement.Web.db"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -12,12 +13,13 @@
     },
     "WriteTo": [
       {
-      "Name": "File",
-      "Args": {
-        "path": "./logs/log-.log",
-        "rollingInterval": "Day"
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.log",
+          "rollingInterval": "Day"
+        }
       }
-    }]
+    ]
   },
   "AllowedHosts": "*"
 }
